css corrections in checkout page text alignments

--- a/src/app/train/trains-traveller/travellers.component.scss
+++ b/src/app/train/trains-traveller/travellers.component.scss
@@ -1022,3 +1022,6 @@ ng::deep .mat-dialog-container {
     margin-top:12px;
     margin-bottom:0px;
 }
+.remove-traveller{
+    cursor:pointer;
+}
