--- a/src/app/train/trains/trains.component.scss
+++ b/src/app/train/trains/trains.component.scss
@@ -953,3 +953,6 @@ $break-md-tab: 768px;
     }
 
 }
+.mb-82{
+    margin-bottom:82px;
+}
